2021-10-31  Bart Schaefer  <schaefer@zsh.org>

	* users/27302: Completion/Unix/Type/_remote_files: respect setting
	of AUTO_REMOVE_SLASH option

2021-10-30  Oliver Kiddle  <opk@zsh.org>

	* 49533: Src/utils.c: add null check for preprompt functions list
	that could occur following an error when loading a module

	* 49528: Src/Zle/comp.h, Src/Zle/compcore.c, Src/Zle/complete.c,
	Completion/X/Command/_xinput, Completion/Zsh/Command/_compadd,
	Doc/Zsh/compwid.yo: allow multiple -D options to compadd

	* unposted (c.f. Bart: 49531): Test/Y02compmatch.ztst: fix test

2021-10-27  Matthew Martin  <phy1729@gmail.com>

	* 49529: Completion/BSD/Command/_rcctl: Add rogue and
	descriptions to _rcctl ls.

2021-10-26  Oliver Kiddle  <opk@zsh.org>

	* Peter Palfrader: 49431 (tweaked, c.f. Bart: 49434):
	Completion/Unix/Type/_ssh_hosts: Faster ~/.ssh/config processing

	* Marlon: 49521: Doc/Zsh/compwid.yo, Test/Y02compmatch.ztst:
	Define correct behavior of || completion matchers

	* 49519: Completion/Base/Utility/_arguments,
	Completion/Darwin/Command/_qtplay, Completion/Unix/Command/_less,
	Completion/Unix/Command/_nm, Completion/Unix/Command/_php,
	Completion/Unix/Command/_strings, Completion/Unix/Command/_zip,
	Completion/X/Command/_gnome-gv: quote completed options as needed
	and remove the now superfluous quotes from option specifications

	* 49516: Src/Zle/compmatch.c: bail out early from matching
	control if command line content is too short for the coanchor

2021-10-24  Jun-ichi Takimoto  <takimoto-j@kba.biglobe.ne.jp>

	* 49520: Etc/completion-style-guide: document $_args_cache_cmd

	* 49493: Completion/Base/Utility/_arguments: fix handling of
	optional argument of long option in help text

2021-10-23  Oliver Kiddle  <opk@zsh.org>

	* 49499 based on 49496 by Jun T.: Src/Zle/computil.c,
	Test/Y03arguments.ztst: fixes to option -A of _arguments

	* 49500: Completion/Linux/Command/_lsns: new completion

2021-10-16  dana  <dana@dana.is>
